Ledger metrics
